# prime_mine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  STRUCTURE.md  __init__.py  ci.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: SomethingElse.md  index.md
src/myproject/: core.py
src/myproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_core.py
